--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
         }
     ],
     "require": {
-        "php": "7.1.23",
+        "php": ">=7.0",
         "phpunit/phpunit": "6.*",
         "guzzlehttp/guzzle": "~6.0"
     },
